// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Program /> categories applies categories to index help 1`] = `
"
Boost v1.2.3 [90mboost[39m

[47m[30m COMMANDS [39m[49m

 qux  Description

 [1mBottom[22m
 foo  Description

 [1mTop[22m
 bar  Description

 [1mGlobal[22m
 baz  Description
"
`;

exports[`<Program /> default command executes default when no args passed 1`] = `
"Build!
"
`;

exports[`<Program /> default command renders commands when no args passed 1`] = `
"
Boost v1.2.3 [90mboost[39m

[47m[30m COMMANDS [39m[49m

 build        Build a project
"
`;

exports[`<Program /> errors for invalid version format 1`] = `"Invalid Program field \\"version\\". String does not match. (pattern \\"^(0|[1-9]\\\\d*)\\\\.(0|[1-9]\\\\d*)\\\\.(0|[1-9]\\\\d*)(?:-((?:0|[1-9]\\\\d*|\\\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\\\.(?:0|[1-9]\\\\d*|\\\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\\\+([0-9a-zA-Z-]+(?:\\\\.[0-9a-zA-Z-]+)*))?$\\")"`;

exports[`<Program /> errors if bin is not kebab case 1`] = `"Invalid Program field \\"bin\\". String must be in kebab case. (pattern \\"^[a-z][\\\\x2D0-9a-z]+$\\")"`;

exports[`<Program /> failure renders if an error is thrown 1`] = `
"
[41m[30m ERROR [39m[49m

 Broken!"
`;

exports[`<Program /> failure renders when args parsing fails 1`] = `
"
[41m[30m ERROR [39m[49m

 Unknown option \\"--foo\\" found. Did you mean \\"help\\"? [ARG:OPTION_UNKNOWN_MORE]

 [90m$ boost [31m--foo[39m[90m[39m
 [31m        └───┘[39m"
`;

exports[`<Program /> failure renders when invalid command name passed 1`] = `
"
[41m[30m ERROR [39m[49m

 Unknown command \\"prune\\". Did you mean \\"build\\"? [CLI:COMMAND_UNKNOWN]"
`;

exports[`<Program /> failure renders when misspelt command name passed 1`] = `
"
[41m[30m ERROR [39m[49m

 Unknown command \\"buld\\". Did you mean \\"build\\"? [CLI:COMMAND_UNKNOWN]"
`;

exports[`<Program /> failure renders when no commands could be found 1`] = `
"
[41m[30m ERROR [39m[49m

 Failed to determine a command to run. [CLI:COMMAND_INVALID_RUN]"
`;

exports[`<Program /> failure renders when no commands have been registered 1`] = `
"
[41m[30m ERROR [39m[49m

 No commands have been registered. At least 1 is required.
 [CLI:COMMAND_NONE_REGISTERED]"
`;

exports[`<Program /> failure renders with custom exit error 1`] = `
"
[41m[30m ERROR [39m[49m

 Oops"
`;

exports[`<Program /> help outputs help for a nested sub-command 1`] = `
"
[47m[30m CLIENT:BUILD [39m[49m

 Build a project

[47m[30m USAGE [39m[49m

 $ build -S ./src -D ./lib

[47m[30m OPTIONS [39m[49m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
 -v, --version        Display version number"
`;

exports[`<Program /> help outputs help for a nested sub-command 2`] = `
"
[47m[30m CLIENT:INSTALL [39m[49m

 Install package(s) [90m[deprecated][39m

[47m[30m PARAMS [39m[49m

 pkg [90mstring[39m  Package name [90m[required][39m
 …pkgs [90mstring[][39m

[47m[30m OPTIONS [39m[49m

 [1mSpecial[22m
     --no-save        Save dependency to lock file (default: true)

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
 -v, --version        Display version number"
`;

exports[`<Program /> help outputs help for a nested sub-command 3`] = `
"
[47m[30m CLIENT [39m[49m

 Client

[47m[30m USAGE [39m[49m

 $ client:install @foo/bar
 $ client:build

[47m[30m COMMANDS [39m[49m

 [1mSetup[22m
 client:uninstall    Uninstall a package

 [1mBuild[22m
 client:build        Build a project

[47m[30m OPTIONS [39m[49m

 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
 -v, --version        Display version number"
`;

exports[`<Program /> help outputs help for a specific command 1`] = `
"
[47m[30m BUILD [39m[49m

 Build a project

[47m[30m USAGE [39m[49m

 $ build -S ./src -D ./lib

[47m[30m OPTIONS [39m[49m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
 -v, --version        Display version number"
`;

exports[`<Program /> help outputs help for a specific command 2`] = `
"
[47m[30m INSTALL [39m[49m

 Install package(s) [90m[deprecated][39m

[47m[30m PARAMS [39m[49m

 pkg [90mstring[39m  Package name [90m[required][39m
 …pkgs [90mstring[][39m

[47m[30m OPTIONS [39m[49m

 [1mSpecial[22m
     --save           Save dependency to lock file

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
 -v, --version        Display version number"
`;

exports[`<Program /> help outputs help for an aliased command 1`] = `
"
[47m[30m BUILD [39m[49m

 Build a project

[47m[30m USAGE [39m[49m

 $ build -S ./src -D ./lib

[47m[30m OPTIONS [39m[49m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
 -v, --version        Display version number"
`;

exports[`<Program /> help outputs help for an aliased command 2`] = `
"
[47m[30m BUILD [39m[49m

 Build a project

[47m[30m USAGE [39m[49m

 $ build -S ./src -D ./lib

[47m[30m OPTIONS [39m[49m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
 -v, --version        Display version number"
`;

exports[`<Program /> help outputs help when \`--help\` is passed 1`] = `
"
Boost v1.2.3 [90mboost[39m

[47m[30m BOOST [39m[49m

 Description

[47m[30m PARAMS [39m[49m

 0 [90mstring[39m     Complex param with many tags. [90m[deprecated, required][39m
 path [90mstring[39m  This is a string param thats required. [90m[required][39m
 ms [90mnumber[39m    And this a number param with a label.
 3 [90mboolean[39m    And finally a boolean param. [90m[deprecated][39m

[47m[30m OPTIONS [39m[49m

     --deprecatedFlag                        A deprecated flag. [90m[deprecated][39m
     --deprecatedStringWithALongName [90mstring[39m  Deprecated string option with
                                             custom label. [90m[deprecated][39m
     --flag                                  Standard boolean option.
     --num [90mnumber[39m                            Standard number option.
 -C, --numberCountable [90mnumber[39m                Number option that increments a
                                             count for each occurence. (default:
                                              10) [90m[counter][39m
 -n, --numberFixedList [90mnumber[39m                A list of numbers to choose from.
                                             (choices: 1, 2, 3, 4, 5, 6, 7, 8,
                                             9, 10) [90m[deprecated][39m
     --numWithArity [90mnumber[][39m                 A multiple number option that
                                             requires an exact number of values.
                                              [90m[multiple(10)][39m
     --str [90mstring[39m                            Standard string option.
 -s, --stringChoices [90mstring[39m                  Choice list with strings. (choices:
                                              \\"foo\\", \\"bar\\" (default), \\"baz\\")
 -S, --strList [90mstring[][39m                      String option list. [90m[multiple][39m
 -t, --no-truthyBool                         Flag that is on by default, so name
                                              should be negated. (default: true)

 [1mGlobal[22m
 -h, --help                                  Display help and usage menu
     --locale [90mstring[39m                         Display output in the chosen locale
                                              (default: \\"en\\")
 -v, --version                               Display version number
"
`;

exports[`<Program /> help outputs help when \`-h\` is passed 1`] = `
"
Boost v1.2.3 [90mboost[39m

[47m[30m BOOST [39m[49m

 Description

[47m[30m PARAMS [39m[49m

 0 [90mstring[39m     Complex param with many tags. [90m[deprecated, required][39m
 path [90mstring[39m  This is a string param thats required. [90m[required][39m
 ms [90mnumber[39m    And this a number param with a label.
 3 [90mboolean[39m    And finally a boolean param. [90m[deprecated][39m

[47m[30m OPTIONS [39m[49m

     --deprecatedFlag                        A deprecated flag. [90m[deprecated][39m
     --deprecatedStringWithALongName [90mstring[39m  Deprecated string option with
                                             custom label. [90m[deprecated][39m
     --flag                                  Standard boolean option.
     --num [90mnumber[39m                            Standard number option.
 -C, --numberCountable [90mnumber[39m                Number option that increments a
                                             count for each occurence. (default:
                                              10) [90m[counter][39m
 -n, --numberFixedList [90mnumber[39m                A list of numbers to choose from.
                                             (choices: 1, 2, 3, 4, 5, 6, 7, 8,
                                             9, 10) [90m[deprecated][39m
     --numWithArity [90mnumber[][39m                 A multiple number option that
                                             requires an exact number of values.
                                              [90m[multiple(10)][39m
     --str [90mstring[39m                            Standard string option.
 -s, --stringChoices [90mstring[39m                  Choice list with strings. (choices:
                                              \\"foo\\", \\"bar\\" (default), \\"baz\\")
 -S, --strList [90mstring[][39m                      String option list. [90m[multiple][39m
 -t, --no-truthyBool                         Flag that is on by default, so name
                                              should be negated. (default: true)

 [1mGlobal[22m
 -h, --help                                  Display help and usage menu
     --locale [90mstring[39m                         Display output in the chosen locale
                                              (default: \\"en\\")
 -v, --version                               Display version number
"
`;

exports[`<Program /> locale errors for invalid \`--locale\` 1`] = `
"
[41m[30m ERROR [39m[49m

 Locale must be in the format of \\"en\\" or \\"en-US\\".

 [90m$ boost [33m--locale[39m[90m wtf[39m
 [33m        └──────┘[39m"
`;

exports[`<Program /> logging handles logging when rendering a component 1`] = `
"Log
[35mtrace[39m Trace
[36minfo[39m Info
Returned from component!Component log
[90mdebug[39m Debug
[33mwarn[39m Warn
[31merror[39m Error
[31merror[39m Component error
"
`;

exports[`<Program /> logging handles logging when returning a string 1`] = `
"Log
[35mtrace[39m Trace
[36minfo[39m Info
Returned from command!
[90mdebug[39m Debug
[33mwarn[39m Warn
[31merror[39m Error
"
`;

exports[`<Program /> nested programs bubbles up errors 1`] = `
"
[41m[30m ERROR [39m[49m

 Bubbles"
`;

exports[`<Program /> nested programs can run a program within a command 1`] = `
"Before run
Install!
After run
Return
"
`;

exports[`<Program /> proxy commands outputs help when \`--help\` is passed 1`] = `
"
[47m[30m BUILD [39m[49m

 Build something

[47m[30m PARAMS [39m[49m

 pkg [90mstring[39m  Package name [90m[required][39m
 … [90mstring[][39m

[47m[30m OPTIONS [39m[49m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: \\"en\\")
 -v, --version        Display version number"
`;

exports[`<Program /> success can return an element that writes with ink 1`] = `"Hello!"`;

exports[`<Program /> tasks can run a task within a task 1`] = `
"Test
Hi
2
[31merror[39m Bye
"
`;

exports[`<Program /> tasks runs a sync task correctly 1`] = `
"Hi
15
[31merror[39m Bye
"
`;

exports[`<Program /> tasks runs an async task correctly 1`] = `
"bazfooBAR
"
`;

exports[`<Program /> version outputs version when \`--version\` is passed 1`] = `
"1.2.3
"
`;

exports[`<Program /> version outputs version when \`-v\` is passed 1`] = `
"1.2.3
"
`;
